examples/test/testpolicy14403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14403
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key9: value41
      key15: value24
      key17: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value20
          key6: value10
      podSelector:
        matchLabels:
          key3: value21
